tests/errors/18_missing_return_value.f
      INTEGER FUNCTION F()
      INTEGER A
      A = 1
      RETURN
      END
